# pluginomatic

./: CMakeLists.txt  CONTRIBUTORS.txt  pluginomatic.jucer  test.dsp  test.filtergraph
Source/: DspFaust.cpp  DspFaust.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
